# RagUltimateAdvisor

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  README.md  docker-compose.yaml  embedding_models.txt  pyproject.toml
.chroma/: chroma.sqlite3
docs/: API.md  ARCHITECTURE.md  CLAUDE.md  EMBEDDING_MODELS.md  ENVIRONMENT.md  GETTING_STARTED.md  SETUP.md
frontend/src/: App.tsx
frontend/src/lib/: api-client.ts
frontend/src/types/: api.ts
guides/: Anthropic.txt
src/: __init__.py  config.py  dependencies.py  main.py  repositories.py  routers.py  schemas.py  services.py
src/history/: __init__.py  repositories.py  routes.py  schemas.py  service.py  services.py
src/rag/: repositories.py
src/scripts/: run_init_db.py  run_load_embeddings.py
tests/: README.md  test_query_vector_store.py
