[project]
name = "ultimateadvisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "llama-index>=0.13.14",
    "llama-index-core>=0.13.14",
    "llama-index-embeddings-voyageai>=0.3.0",
    "llama-index-llms-anthropic>=0.8.1",
    "llama-index-vector-stores-chroma>=0.4.0",
    "chromadb>=0.5.23",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C90", "B", "I", "T"]
lint.ignore = [
    "T201",  # Allow print statements for debugging
    "E501",  # Ignore line length (handled by black)
    "B008",  # Ignore Depends
]
exclude = [
    "*tests*",
]
